fixed screen jumping when bookmarking

--- a/css/utility.css
+++ b/css/utility.css
@@ -9,9 +9,3 @@
 .hidden {
   display: none;
 }
-
-.hidden-off-screen {
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
-}
